ANTLRv4Parser/ANTLRv4Parser.cpp

// Generated from ANTLRv4Parser.g4 by ANTLR 4.9.1


#include "ANTLRv4ParserListener.h"
#include "ANTLRv4ParserVisitor.h"

#include "ANTLRv4Parser.h"


using namespace antlrcpp;
using namespace antlr4;

ANTLRv4Parser::ANTLRv4Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ANTLRv4Parser::~ANTLRv4Parser() {
  delete _interpreter;
}

std::string ANTLRv4Parser::getGrammarFileName() const {
  return "ANTLRv4Parser.g4";
}

const std::vector<std::string>& ANTLRv4Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ANTLRv4Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- GrammarSpecContext ------------------------------------------------------------------

ANTLRv4Parser::GrammarSpecContext::GrammarSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ANTLRv4Parser::GrammarDeclContext* ANTLRv4Parser::GrammarSpecContext::grammarDecl() {
  return getRuleContext<ANTLRv4Parser::GrammarDeclContext>(0);
}

ANTLRv4Parser::RulesContext* ANTLRv4Parser::GrammarSpecContext::rules() {
  return getRuleContext<ANTLRv4Parser::RulesContext>(0);
}

tree::TerminalNode* ANTLRv4Parser::GrammarSpecContext::EOF() {
  return getToken(ANTLRv4Parser::EOF, 0);
}

std::vector<ANTLRv4Parser::PrequelConstructContext *> ANTLRv4Parser::GrammarSpecContext::prequelConstruct() {
  return getRuleContexts<ANTLRv4Parser::PrequelConstructContext>();
}

ANTLRv4Parser::PrequelConstructContext* ANTLRv4Parser::GrammarSpecContext::prequelConstruct(size_t i) {
  return getRuleContext<ANTLRv4Parser::PrequelConstructContext>(i);
}

std::vector<ANTLRv4Parser::ModeSpecContext *> ANTLRv4Parser::GrammarSpecContext::modeSpec() {
  return getRuleContexts<ANTLRv4Parser::ModeSpecContext>();
}

ANTLRv4Parser::ModeSpecContext* ANTLRv4Parser::GrammarSpecContext::modeSpec(size_t i) {
  return getRuleContext<ANTLRv4Parser::ModeSpecContext>(i);
}


size_t ANTLRv4Parser::GrammarSpecContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleGrammarSpec;
}

void ANTLRv4Parser::GrammarSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGrammarSpec(this);
}

void ANTLRv4Parser::GrammarSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGrammarSpec(this);
}


antlrcpp::Any ANTLRv4Parser::GrammarSpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitGrammarSpec(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::GrammarSpecContext* ANTLRv4Parser::grammarSpec() {
  GrammarSpecContext *_localctx = _tracker.createInstance<GrammarSpecContext>(_ctx, getState());
  enterRule(_localctx, 0, ANTLRv4Parser::RuleGrammarSpec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    grammarDecl();
    setState(132);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ANTLRv4Parser::OPTIONS)
      | (1ULL << ANTLRv4Parser::TOKENS)
      | (1ULL << ANTLRv4Parser::CHANNELS)
      | (1ULL << ANTLRv4Parser::IMPORT)
      | (1ULL << ANTLRv4Parser::AT))) != 0)) {
      setState(129);
      prequelConstruct();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(135);
    rules();
    setState(139);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ANTLRv4Parser::MODE) {
      setState(136);
      modeSpec();
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(142);
    match(ANTLRv4Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GrammarDeclContext ------------------------------------------------------------------

ANTLRv4Parser::GrammarDeclContext::GrammarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ANTLRv4Parser::GrammarTypeContext* ANTLRv4Parser::GrammarDeclContext::grammarType() {
  return getRuleContext<ANTLRv4Parser::GrammarTypeContext>(0);
}

ANTLRv4Parser::IdentifierContext* ANTLRv4Parser::GrammarDeclContext::identifier() {
  return getRuleContext<ANTLRv4Parser::IdentifierContext>(0);
}

tree::TerminalNode* ANTLRv4Parser::GrammarDeclContext::SEMI() {
  return getToken(ANTLRv4Parser::SEMI, 0);
}


size_t ANTLRv4Parser::GrammarDeclContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleGrammarDecl;
}

void ANTLRv4Parser::GrammarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGrammarDecl(this);
}

void ANTLRv4Parser::GrammarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGrammarDecl(this);
}


antlrcpp::Any ANTLRv4Parser::GrammarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitGrammarDecl(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::GrammarDeclContext* ANTLRv4Parser::grammarDecl() {
  GrammarDeclContext *_localctx = _tracker.createInstance<GrammarDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, ANTLRv4Parser::RuleGrammarDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    grammarType();
    setState(145);
    identifier();
    setState(146);
    match(ANTLRv4Parser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GrammarTypeContext ------------------------------------------------------------------

ANTLRv4Parser::GrammarTypeContext::GrammarTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ANTLRv4Parser::GrammarTypeContext::LEXER() {
  return getToken(ANTLRv4Parser::LEXER, 0);
}

tree::TerminalNode* ANTLRv4Parser::GrammarTypeContext::GRAMMAR() {
  return getToken(ANTLRv4Parser::GRAMMAR, 0);
}

tree::TerminalNode* ANTLRv4Parser::GrammarTypeContext::PARSER() {
  return getToken(ANTLRv4Parser::PARSER, 0);
}


size_t ANTLRv4Parser::GrammarTypeContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleGrammarType;
}

void ANTLRv4Parser::GrammarTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGrammarType(this);
}

void ANTLRv4Parser::GrammarTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGrammarType(this);
}


antlrcpp::Any ANTLRv4Parser::GrammarTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitGrammarType(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::GrammarTypeContext* ANTLRv4Parser::grammarType() {
  GrammarTypeContext *_localctx = _tracker.createInstance<GrammarTypeContext>(_ctx, getState());
  enterRule(_localctx, 4, ANTLRv4Parser::RuleGrammarType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ANTLRv4Parser::LEXER: {
        setState(148);
        match(ANTLRv4Parser::LEXER);
        setState(149);
        match(ANTLRv4Parser::GRAMMAR);
        break;
      }

      case ANTLRv4Parser::PARSER: {
        setState(150);
        match(ANTLRv4Parser::PARSER);
        setState(151);
        match(ANTLRv4Parser::GRAMMAR);
        break;
      }

      case ANTLRv4Parser::GRAMMAR: {
        setState(152);
        match(ANTLRv4Parser::GRAMMAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrequelConstructContext ------------------------------------------------------------------

ANTLRv4Parser::PrequelConstructContext::PrequelConstructContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ANTLRv4Parser::OptionsSpecContext* ANTLRv4Parser::PrequelConstructContext::optionsSpec() {
  return getRuleContext<ANTLRv4Parser::OptionsSpecContext>(0);
}

ANTLRv4Parser::DelegateGrammarsContext* ANTLRv4Parser::PrequelConstructContext::delegateGrammars() {
  return getRuleContext<ANTLRv4Parser::DelegateGrammarsContext>(0);
}

ANTLRv4Parser::TokensSpecContext* ANTLRv4Parser::PrequelConstructContext::tokensSpec() {
  return getRuleContext<ANTLRv4Parser::TokensSpecContext>(0);
}

ANTLRv4Parser::ChannelsSpecContext* ANTLRv4Parser::PrequelConstructContext::channelsSpec() {
  return getRuleContext<ANTLRv4Parser::ChannelsSpecContext>(0);
}

ANTLRv4Parser::Action_Context* ANTLRv4Parser::PrequelConstructContext::action_() {
  return getRuleContext<ANTLRv4Parser::Action_Context>(0);
}


size_t ANTLRv4Parser::PrequelConstructContext::getRuleIndex() const {
  return ANTLRv4Parser::RulePrequelConstruct;
}

void ANTLRv4Parser::PrequelConstructContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrequelConstruct(this);
}

void ANTLRv4Parser::PrequelConstructContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrequelConstruct(this);
}


antlrcpp::Any ANTLRv4Parser::PrequelConstructContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitPrequelConstruct(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::PrequelConstructContext* ANTLRv4Parser::prequelConstruct() {
  PrequelConstructContext *_localctx = _tracker.createInstance<PrequelConstructContext>(_ctx, getState());
  enterRule(_localctx, 6, ANTLRv4Parser::RulePrequelConstruct);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(160);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ANTLRv4Parser::OPTIONS: {
        enterOuterAlt(_localctx, 1);
        setState(155);
        optionsSpec();
        break;
      }

      case ANTLRv4Parser::IMPORT: {
        enterOuterAlt(_localctx, 2);
        setState(156);
        delegateGrammars();
        break;
      }

      case ANTLRv4Parser::TOKENS: {
        enterOuterAlt(_localctx, 3);
        setState(157);
        tokensSpec();
        break;
      }

      case ANTLRv4Parser::CHANNELS: {
        enterOuterAlt(_localctx, 4);
        setState(158);
        channelsSpec();
        break;
      }

      case ANTLRv4Parser::AT: {
        enterOuterAlt(_localctx, 5);
        setState(159);
        action_();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionsSpecContext ------------------------------------------------------------------

ANTLRv4Parser::OptionsSpecContext::OptionsSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ANTLRv4Parser::OptionsSpecContext::OPTIONS() {
  return getToken(ANTLRv4Parser::OPTIONS, 0);
}

tree::TerminalNode* ANTLRv4Parser::OptionsSpecContext::LBRACE() {
  return getToken(ANTLRv4Parser::LBRACE, 0);
}

tree::TerminalNode* ANTLRv4Parser::OptionsSpecContext::RBRACE() {
  return getToken(ANTLRv4Parser::RBRACE, 0);
}

std::vector<ANTLRv4Parser::OptionContext *> ANTLRv4Parser::OptionsSpecContext::option() {
  return getRuleContexts<ANTLRv4Parser::OptionContext>();
}

ANTLRv4Parser::OptionContext* ANTLRv4Parser::OptionsSpecContext::option(size_t i) {
  return getRuleContext<ANTLRv4Parser::OptionContext>(i);
}

std::vector<tree::TerminalNode *> ANTLRv4Parser::OptionsSpecContext::SEMI() {
  return getTokens(ANTLRv4Parser::SEMI);
}

tree::TerminalNode* ANTLRv4Parser::OptionsSpecContext::SEMI(size_t i) {
  return getToken(ANTLRv4Parser::SEMI, i);
}


size_t ANTLRv4Parser::OptionsSpecContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleOptionsSpec;
}

void ANTLRv4Parser::OptionsSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionsSpec(this);
}

void ANTLRv4Parser::OptionsSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionsSpec(this);
}


antlrcpp::Any ANTLRv4Parser::OptionsSpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitOptionsSpec(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::OptionsSpecContext* ANTLRv4Parser::optionsSpec() {
  OptionsSpecContext *_localctx = _tracker.createInstance<OptionsSpecContext>(_ctx, getState());
  enterRule(_localctx, 8, ANTLRv4Parser::RuleOptionsSpec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    match(ANTLRv4Parser::OPTIONS);
    setState(163);
    match(ANTLRv4Parser::LBRACE);
    setState(169);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ANTLRv4Parser::TOKEN_REF

    || _la == ANTLRv4Parser::RULE_REF) {
      setState(164);
      option();
      setState(165);
      match(ANTLRv4Parser::SEMI);
      setState(171);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(172);
    match(ANTLRv4Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionContext ------------------------------------------------------------------

ANTLRv4Parser::OptionContext::OptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ANTLRv4Parser::IdentifierContext* ANTLRv4Parser::OptionContext::identifier() {
  return getRuleContext<ANTLRv4Parser::IdentifierContext>(0);
}

tree::TerminalNode* ANTLRv4Parser::OptionContext::ASSIGN() {
  return getToken(ANTLRv4Parser::ASSIGN, 0);
}

ANTLRv4Parser::OptionValueContext* ANTLRv4Parser::OptionContext::optionValue() {
  return getRuleContext<ANTLRv4Parser::OptionValueContext>(0);
}


size_t ANTLRv4Parser::OptionContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleOption;
}

void ANTLRv4Parser::OptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOption(this);
}

void ANTLRv4Parser::OptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOption(this);
}


antlrcpp::Any ANTLRv4Parser::OptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitOption(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::OptionContext* ANTLRv4Parser::option() {
  OptionContext *_localctx = _tracker.createInstance<OptionContext>(_ctx, getState());
  enterRule(_localctx, 10, ANTLRv4Parser::RuleOption);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(174);
    identifier();
    setState(175);
    match(ANTLRv4Parser::ASSIGN);
    setState(176);
    optionValue();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionValueContext ------------------------------------------------------------------

ANTLRv4Parser::OptionValueContext::OptionValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ANTLRv4Parser::IdentifierContext *> ANTLRv4Parser::OptionValueContext::identifier() {
  return getRuleContexts<ANTLRv4Parser::IdentifierContext>();
}

ANTLRv4Parser::IdentifierContext* ANTLRv4Parser::OptionValueContext::identifier(size_t i) {
  return getRuleContext<ANTLRv4Parser::IdentifierContext>(i);
}

std::vector<tree::TerminalNode *> ANTLRv4Parser::OptionValueContext::DOT() {
  return getTokens(ANTLRv4Parser::DOT);
}

tree::TerminalNode* ANTLRv4Parser::OptionValueContext::DOT(size_t i) {
  return getToken(ANTLRv4Parser::DOT, i);
}

tree::TerminalNode* ANTLRv4Parser::OptionValueContext::STRING_LITERAL() {
  return getToken(ANTLRv4Parser::STRING_LITERAL, 0);
}

ANTLRv4Parser::ActionBlockContext* ANTLRv4Parser::OptionValueContext::actionBlock() {
  return getRuleContext<ANTLRv4Parser::ActionBlockContext>(0);
}

tree::TerminalNode* ANTLRv4Parser::OptionValueContext::INT() {
  return getToken(ANTLRv4Parser::INT, 0);
}


size_t ANTLRv4Parser::OptionValueContext::getRuleIndex() const {
  return ANTLRv4Parser::RuleOptionValue;
}

void ANTLRv4Parser::OptionValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionValue(this);
}

void ANTLRv4Parser::OptionValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ANTLRv4ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionValue(this);
}


antlrcpp::Any ANTLRv4Parser::OptionValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ANTLRv4ParserVisitor*>(visitor))
    return parserVisitor->visitOptionValue(this);
  else
    return visitor->visitChildren(this);
}

ANTLRv4Parser::OptionValueContext* ANTLRv4Parser::optionValue() {
  OptionValueContext *_localctx = _tracker.createInstance<OptionValueContext>(_ctx, getState());
  enterRule(_localctx, 12, ANTLRv4Parser::RuleOptionValue);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(189);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ANTLRv4Parser::TOKEN_REF:
      case ANTLRv4Parser::RULE_REF: {
        enterOuterAlt(_localctx, 1);
        setState(178);
        identifier();
        setState(183);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ANTLRv4Parser::DOT) {
          setState(179);
          match(ANTLRv4Parser::DOT);
          setState(180);
          identifier();
          setState(185);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case ANTLRv4Parser::STRING_LITERAL: {
        enterOuterAlt(_localctx, 2);
        setState(186);
        match(ANTLRv4Parser::STRING_LITERAL);
        break;
      }

      case ANTLRv4Parser::BEGIN_ACTION: {
        enterOuterAlt(_localctx, 3);
        setState(187);
        actionBlock();
        break;
      }

      case ANTLRv4Parser::INT: {
        enterOuterAlt(_localctx, 4);
        setState(188);
        match(ANTLRv4Parser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DelegateGrammarsContext ------------------------------------------------------------------

ANTLRv4Parser::DelegateGrammarsContext::DelegateGrammarsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ANTLRv4Parser::DelegateGrammarsContext::IMPORT() {
  return getToken(ANTLRv4Parser::IMPORT, 0);
}
